@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-30T16:22:10Z",
+  "timestamp" : "2022-05-31T08:23:04Z",
   "count_outdated" : 302,
   "uniques_outdated" : 166,
-  "count" : 329,
-  "uniques" : 185,
+  "count" : 330,
+  "uniques" : 186,
   "clones" : [
     {
       "timestamp": "2022-05-17T00:00:00Z",
@@ -65,6 +65,13 @@
       "timestamp": "2022-05-30T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-31T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
