@@ -1,5 +1,5 @@
 {
-  "count": 27,
+  "count": 28,
   "uniques": 12,
   "clones": [
     {
@@ -45,6 +45,11 @@
     {
       "timestamp": "2022-05-30T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-31T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
